<resources>
    <!-- App Name -->
    <string name="app_name">Area Advice</string>
    <!-- Nav Bar -->
    <string name="menu_Home">Home</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_SavedLocations">Saved Locations</string>
    <!-- Home -->
    <string name="search_hint">Enter search query…</string>
    <string name="search">Search</string>
    <string name="mapButtonName">Maps</string>
    <string name="clrButtonName">Clear</string>
    <string name="loading">Loading results…</string>
    <string name="recBtn">Recommend</string>
    <string name="no_results">No results found.</string>
    <string name="place_details">
        Images: %1$d\nName: %2$s\nAddress: %3$s\nRating: %4$s\nReviews: %5$d\nType: %6$s\nLocation: %7$s\n
        Open?: %8$b\nSchedule: %9$s\nURL: %10$s
    </string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <!-- Location Info -->
    <string name="save">Save</string>
    <string name="delBtn">Delete</string>
    <string name="testStringHours">
        Mon: 6:30am - 9:30pm\nTues: 6:30am - 9:30pm\nWed: 6:30am - 9:30pm\nThurs: 6:30am - 9:30pm\nFri: 6:30am - 9:30pm\nSat: 7:00am - 8:00pm\nSun: closed
    </string>
    <string name="no_schedule">Schedule not available</string>
    <string name="sample_reviews">
        Rating: 5\t<i>3 weeks ago</i>\nGreat place, highly recommend!\n\nRating: 3\t<i>a month ago</i>\nThe food was OK.\n\nRating: 1\t<i>6 months ago</i>\nHorrible place! Never again!\n\n
    </string>
    <!-- Settings -->
    <string name="sensor_recommendations">Sensors</string>
    <string name="OnChoice">On</string>
    <string name="OffChoice">Off</string>
    <string name="maxRadius">Radius</string>
    <string name="startVal">25</string>
    <string name="chooseUnit">Units</string>
    <string name="unitChoiceSI">SI</string>
    <string name="unitChoiceUSA">US</string>
    <string name="RecommendationCriteria">Sort By</string>
    <string name="distance">Distance</string>
    <string name="ratings">Ratings</string>
    <string name="ShowOpenLocationsOnly">Open Locations Only</string>
    <string name="sensor_temp">Temperature: %1$d %2$s</string>
    <string name="sensor_light">Light: %1$d %2$s</string>
    <string name="temp_celsius">\u00B0C</string>
    <string name="temp_fahrenheit">\u00B0F</string>
    <string name="light_lux">lx</string> <!-- aka the abundance of RU buses -->
    <string name="light_foot_candle">fc</string> <!-- legit never heard of this -->
    <string name="no_sensor_temp">Temperature sensor unavailable</string>
    <string name="no_sensor_light">Light sensor unavailable</string>
    <!-- Maps -->
    <string name="title_activity_maps">Map</string>
</resources>
