<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Home">

    <EditText
        android:id="@+id/editTextSearch"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/imageButtonSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/search"
        android:padding="5dp"
        android:src="@mipmap/outline_search_black_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/editTextSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonFilter"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/filter"
        android:padding="5dp"
        android:src="@mipmap/outline_filter_list_black_18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonSearch" />

    <Button
        android:id="@+id/map"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/mapButtonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageButtonFilter" />

    <Button
        android:id="@+id/clear"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/clrButtonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map" />

    <Button
        android:id="@+id/save"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clear" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPlaces"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/loading"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonFilter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />

</androidx.constraintlayout.widget.ConstraintLayout>
